added event and amount of votes per event functionality
